# lab06_homework

./: ..travis.ymal.swp  .travis.yml  README.md
solver_application/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  solver
solver_application/formatter_ex_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
solver_application/solver_lib/: Makefile  cmake_install.cmake
tmp/formatter_ex_lib/: CMakeLists.txt  cmake_install.cmake
tmp/formatter_ex_lib/formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile
tmp/hello_world_application/formatter_ex_lib/: Makefile
tmp/hello_world_application/formatter_ex_lib/formatter_lib/: CMakeList.txt  cmake_install.cmake
tmp/solver_application/: CMakeLists.txt  CPackConfig.cmake
tmp/solver_application/formatter_ex_lib/: CMakeCache.txt
tmp/tests/: print.cpp
